# perigee

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  justfile
assets/blender/: player-camera.blend  player-character.blend  scene.blend
assets/blender/addons/PerigeeEngineAddon/: property_manager.py
assets/blender/levels/: 0.blend
assets/gltf/: player-camera.glb
assets/gltf/levels/0/: scene.glb
assets/gltf/shared/: player-character.glb
bevy_interface/: Cargo.toml  README.md
bevy_interface/src/: main.rs
bevy_interface/src/components/: mod.rs
bevy_interface/src/plugins/: first_person_control.rs  mod.rs
bevy_interface/src/plugins/levels/: main.rs  mod.rs  pause_menu.rs
bevy_interface/src/states/: mod.rs
bevy_interface/src/systems/: mod.rs  pausing.rs  teardown_game_level.rs
blender_addon/: __init__.py  poi_arrow_importer.py  property_manager.py
core/: Cargo.toml  README.md
core/src/: audiovisual_assets.rs  event_channel.rs  input.rs  lib.rs  math.rs  player.rs  settings.rs  time.rs
core/src/animation/: manager.rs
core/src/config/: mod.rs  physics.rs  player.rs
core/src/data_structures/: bimap.rs  mod.rs  queue.rs
core/src/events/: audiovisual.rs  mod.rs  player.rs
core/src/ffi/: interface_commands.rs  strings.rs
core/src/perigee_gltf/: extras.rs  mod.rs
core/src/physics/: collision_event_mgmt.rs  event_queue.rs  mod.rs
core/src/traits/: mod.rs
core_macros/: Cargo.toml  README.md
core_macros/src/: slotted_types.rs
core_macros/src/ffi/: helpers.rs
rust/: Cargo.toml
rust/macros/: Cargo.toml
rust/macros/src/: lib.rs  shared.rs
rust/macros/src/ffi/: mod.rs
rust/src/: event_channel.rs  lib.rs  logger.rs  math.rs  pointers.rs  time.rs  types.rs
rust/src/animation/: asset.rs  manager.rs  mod.rs
rust/src/data_structures/: bimap.rs  mod.rs  queue.rs  state_machine.rs
rust/src/ffi/: bytes.rs  interface_commands.rs  mod.rs  strings.rs
rust/src/perigee_gltf/: extras.rs  mod.rs  poi.rs  prefabs.rs  util.rs
rust/src/physics/: collider_event_listener.rs  collision_event_mgmt.rs  contact_event_mgmt.rs  handle_map.rs  mod.rs
rust/src/traits/: mod.rs  physics.rs
scripts/: build-wasm-levels.js  copy-assets-to-bevy-interface.js  dev_server.ts  optimize-gltfs.js  prepare-web-artifacts.js
single_player/: Cargo.toml  README.md
single_player/src/: lib.rs
single_player/src/config/: mod.rs  player.rs
single_player/src/level_0/: config.rs  events.rs  mod.rs
single_player/src/shared/: input.rs  interactions.rs  mod.rs  settings.rs
single_player/src/shared/events/: mod.rs  player.rs
single_player/src/shared/player/: mod.rs  shared.rs
single_player/tests/: basic.rs
single_player/wasm_js_wrappers/levels/0/: sim.test.js
single_player_ffi/: Cargo.toml  README.md
single_player_ffi/src/: lib.rs  types.rs
single_player_ffi/src/level_0/: mod.rs
single_player_ffi/wasm_js_wrappers/: package-lock.json  package.json
single_player_ffi/wasm_js_wrappers/level_0/: sim.js  sim.test.js
static_web_interface/gltf/player/: player-character.glb  player-model.glb
static_web_interface/js/components/: modal.js
static_web_interface/js/graphics/: three.module.js
static_web_interface/js/graphics/postprocessing/: AfterImagePass.js  EffectComposer.js  HalftonePass.js  MaskPass.js  OutlinePass.js  PixelatePass.js  SMAAPass.js  SSAARenderPass.js  ShaderPass.js  UnrealBloomPass.js
static_web_interface/js/graphics/postprocessing/shaders/: BokehShader.js  BokehShader2.js  FXAAShader.js  (+1 more)
static_web_interface/js/graphics/prefabs/: skydome.module.js  sun.module.js
static_web_interface/js/input/: game-input.module.js  gamepad.module.js  virtual-btn.module.js  virtual-joystick.module.js  virtual-jumpbtn.module.js
static_web_interface/js/levels/shared/: events.js  wasm-ffi-utils.js
static_web_interface/js/misc/: mobile-safari-disable-pinch-zoom.js  utils.module.js
static_web_interface/level/: 0.html
static_web_interface/wasm/levels/0/: sim.wasm
web/css/: perigee.css  virtual-joystick.css
web/js/components/: modal.js
web/js/debug/: lil-gui.module.js  stats.module.js
web/js/graphics/loaders/: gltf-loader.module.js  lut-cube-loader.js
web/js/graphics/postprocessing/: BloomPass.js  BokehPass.js  LutPass.js  Pass.js  RenderPass.js  RenderPixelatePass.js
web/js/graphics/three-ext/: terrain-instancedmesh.module.js  utils.module.js
web/js/input/: virtual-crouchbtn.module.js
web/js/levels/0/: Sim.module.js
web_interface/: README.md  index.html
web_interface/css/: perigee.css
web_interface/gltf/levels/0/: graphics-world.glb  physics-world.glb
web_interface/js/components/: modal.js
web_interface/js/graphics/loaders/: gltf-loader.module.js  lut-cube-loader.js
web_interface/js/graphics/postprocessing/: AfterImagePass.js  BloomPass.js  BokehPass.js  LutPass.js  OutlinePass.js  Pass.js  PixelatePass.js  RenderPass.js  RenderPixelatePass.js  ShaderPass.js  UnrealBloomPass.js
web_interface/js/graphics/shaders/: BokehShader2.js  ConvolutionShader.js  CopyShader.js  FXAAShader.js
web_interface/js/input/: GameInput.module.js  controller.module.js  keyboard.module.js  pointerlock.module.js  touch.module.js
web_interface/js/levels/0/: Sim.module.js
web_interface/js/misc/: utils.module.js
web_interface/level/: 0.html
web_interface/wasm/levels/0/: sim.wasm
(+4 files in other folders)
