[package]
name = "core"
version = "0.1.0"
edition = "2021"
authors = ["Gerald \"aunyks\" Nash"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# https://github.com/gltf-rs/gltf
gltf = { version = "1.0.0" }

# https://github.com/dimforge/rapier
rapier3d = { git = "https://github.com/dimforge/rapier.git", features = ["serde-serialize"] }

# https://github.com/bincode-org/bincode
bincode = "1.3.3"

# https://github.com/alexcrichton/toml-rs
toml = { version = "0.5.8" }

# https://github.com/serde-rs/serde
serde = { version = "1.0.97", features = ["derive"] }
