[package]
name = "core"
version = "0.1.0"
edition = "2021"
authors = ["Gerald Nash"]

[features]
ffi = []

[dependencies]
core_macros = { path = "../core_macros" }

# https://github.com/gltf-rs/gltf
gltf = { version = "1.1.0", features = ["extras"] }

# https://github.com/dimforge/rapier
rapier3d = { version = "0.17.1", features = ["serde-serialize"] }

# https://github.com/bincode-org/bincode
bincode = { version = "1.3.3" }

# https://github.com/alexcrichton/toml-rs
toml = { version = "0.5.8" }

# https://github.com/serde-rs/serde
serde = { version = "1.0.97", features = ["derive"] }

# https://github.com/serde-rs/json
serde_json = { version = "1.0.87" }

# https://github.com/dtolnay/thiserror
thiserror = { version = "1.0.37" }

# https://github.com/crossbeam-rs/crossbeam
crossbeam = { version = "0.8" }

# https://github.com/rust-lang/log
log = { version = "0.4.17" }
