[package]
name = "core_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
# https://github.com/dtolnay/syn
syn = { version = "1.0.103", features = ["full", "extra-traits"] }

# https://github.com/dtolnay/proc-macro2
proc-macro2 = { version = "1.0.47" }

# https://github.com/dtolnay/quote
quote = { version = "1.0.21" }